Ayoub1 changes