@@ -17,7 +17,7 @@
 	<description>Backend pour l&apos;application Rental Cars</description>
 
 	<properties>
-		<java.version>21</java.version>
+		<java.version>23</java.version>
 	</properties>
 
 	<dependencies>
@@ -136,7 +136,14 @@
 			<version>7.2.3</version>
 		</dependency>
 
-    </dependencies>
+		<dependency>
+			<groupId>com.stripe</groupId>
+			<artifactId>stripe-java</artifactId>
+			<version>20.124.0</version>
+		</dependency>
+
+
+	</dependencies>
 
 	<build>
 		<plugins>
@@ -144,7 +151,16 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-		</plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>23</source>
+                    <target>23</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
+            </plugin>
+        </plugins>
 	</build>
 
 </project>
